--- a/SystemIO/_Layout.cshtml
+++ b/SystemIO/_Layout.cshtml
@@ -11,11 +11,11 @@
             height: 30px;
         }
 
-        ul {
+       nav ul {
             list-style-type: none;
         }
 
-        li {
+       nav ul li {
             display: inline;
              margin: 10px;
 
